# terminalpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  LICENSE.md  README.md  ROADMAP.md  STYLE.md  TODO.md  build-stamp.h  lgtm.yml  linux.sh  setup.sh  sonar-project.properties  terminalpp.cer
-draft/: scrollable.h
.github/: FUNDING.yml
asciienc/: CMakeLists.txt  README.md  asciienc.cpp
benchmarks/: README.md
bypass/: CMakeLists.txt  README.md  bypass.cpp
docs/: CMakeLists.txt  CNAME  Makefile  index.html  snapcraft.md  tpp-builder-win.md  windows_store.md
docs/documentation/: Doxyfile  conf.py  index.rst
docs/documentation/vterm/: vt100.rst
docs/doxygen/: Doxyfile
docs/helpers/: index.rst
docs/ui/: widget.rst
docs/vterm/: index.rst
helpers/: #log.h#  README.md  ansi-terminal.h  ansi_sequences.h  args.h  base64.h  bits.h  buffer.h  char.h  cmake_arch.cmake  curl.h  events.h  filesystem.h  fsm.h  git.h  hash.h  helpers.cmake  helpers.h  json.h  json_config.h  locks.h  log.h  memory.h  object.h  platform.h  process.h  raii.h  shapes.h  stamp.h  stamp_generator.cpp  string.h  strings.h  telemetry.h  tests.h  time.h  version.h  win32.h
resources/: terminalpp.desktop
ropen/: CMakeLists.txt  README.md  main_ropen.cpp  ropen.cpp
scripts/: build-apple.sh  build-bypass.sh  build-linux.sh  build-macos.sh  build-windows.bat  check-tty.sh  clipboard.sh  colors.sh  create-certificate.ps1  double-height.sh  github-actions-install-snapcraft.sh  install-ropen.sh  linux.sh  setup-apple.sh  setup-bsd.sh  setup-devel.sh  setup-linux.sh  setup-macos.sh  setup-repos-linux-ssh.sh  setup-repos-macos-ssh.sh  setup-repos-macos.sh  setup-repos-ssh.sh  setup-repos.sh  setup-windows.bat  text-styles.sh
terminalpp/: CMakeLists.txt  README.md  application.cpp  application.h  config.cpp  config.h  font.h  main_terminalpp.cpp  main_tpp.cpp  remote_files.cpp  remote_files.h  settings_json.h  stamp.h  tpp.cpp  window.cpp  window.h
terminalpp/directwrite/: directwrite_application.cpp  directwrite_application.h  directwrite_font.cpp  directwrite_font.h  directwrite_window.cpp  directwrite_window.h  terminalpp.exe.manifest  terminalpp.rc  tpp.rc  windows.h
terminalpp/forms/: about_box.h  session.h  terminal_window.cpp  terminal_window.h
terminalpp/qt/: qt_application.cpp  qt_application.h  qt_font.h  qt_window.cpp  qt_window.h  terminalpp.qrc
terminalpp/resources/images/: logo-notification.xcf
terminalpp/x11/: tppIcon.cpp  tppIconNotification.cpp  x11.h  x11_application.cpp  x11_application.h  x11_font.cpp  x11_font.h  x11_window.cpp  x11_window.h
terminalpp/x11/resources/: tppIcon.cpp  tppIconNotification.cpp
tests/: CMakeLists.txt  main-tests.cpp
tests/scripts/: check-tty.sh  colors.sh  double-height.sh  hyperlink.sh  install-fonts.sh  inverse-mode.sh  ptypp.sh  scrolling.sh
tools/: CMakeLists.txt  stamp.cpp  xIconCpp.cpp
tpp/: CMakeLists.txt  application.cpp  application.h  base_application.h  base_terminal_window.cpp  base_terminal_window.h  config.cpp  config.h  font.h  main.cpp  remote_files.cpp  remote_files.h  resource.h  session.cpp  session.h  settings.h  settings_json.h  terminal_window.cpp  terminal_window.h  tpp.cpp  tpp.h  tpp.rc  window.cpp  window.h
tpp-bypass/: CMakeLists.txt  README.md  install.sh  main_bypass.cpp
tpp-lib/: CMakeLists.txt  README.md  bypass_pty.cpp  bypass_pty.h  commands.cpp  commands.h  encoder.h  local_pty.cpp  local_pty.h  pty.h  pty_buffer.h  ptypp.h  raw_mode.h  remote_files.cpp  remote_files.h  sequence.cpp  sequence.h  sequences.h  terminal.cpp  terminal.h  terminal_client.cpp  terminal_client.h  terminal_pty.cpp  terminal_pty.h
tpp-server/: CMakeLists.txt  README.md  ansi_keys.inc.h  ansi_renderer.cpp  ansi_renderer.h  csi_sequence.cpp  csi_sequence.h  main_tpp_server.cpp
tpp-widget/: CMakeLists.txt  bypass_pty.cpp  bypass_pty.h  local_pty.cpp  local_pty.h  terminalpp.cpp  terminalpp.h
tpp/conPTY_connector/: ConPty_connector.h  conpty_connector.cpp
tpp/conpty/: conpty_connector.cpp  conpty_connector.h  conpty_process.cpp  conpty_process.h
tpp/directwrite/: directwrite_application.cpp  directwrite_application.h  directwrite_font.h  directwrite_terminal_window.cpp  directwrite_terminal_window.h  directwrite_window.cpp  directwrite_window.h  tpp.rc
tpp/forms/: about_box.h  session.h
tpp/gdi/: application.cpp  application.h  gdi_application.cpp  gdi_application.h  gdi_terminal_window.cpp  gdi_terminal_window.h  terminal_window.cpp  terminal_window.h
tpp/installer/msi/: tpp.wxs
tpp/installer/msi/vcredist/: Microsoft_VC142_CRT_x64.msm
tpp/linux/: application.cpp  application.h  pty_terminal.h  terminal_window.cpp  terminal_window.h
tpp/win32/: application.cpp  application.h  pty_terminal.h  terminal_window.cpp  terminal_window.h
tpp/x11/: tppIcon.cpp  x11.h  x11_application.cpp  x11_application.h  x11_font.h  x11_terminal_window.cpp  x11_terminal_window.h  x11_window.cpp  x11_window.h
ui-terminal/: CMakeLists.txt  README.md  ansi-terminal.cpp  ansi-terminal.h  ansi_keys.inc.h  ansi_renderer.cpp  ansi_renderer.h  ansi_terminal.cpp  ansi_terminal.h  bypass_pty.cpp  bypass_pty.h  csi_sequence.cpp  local_pty.cpp  local_pty.h  osc_sequence.cpp  osc_sequence.h  pty.h  terminal.cpp  terminal.h  terminal_ui.cpp  terminal_ui.h  terminalpp.cpp  terminalpp.h  ui_terminal.h  url_matcher.h
ui-terminal/tests/: url_matcher.cpp
vterm/: CMakeLists.txt  README.md  VT100.md  ascii_encoder.h  bypass_pty.cpp  bypass_pty.h  char.h  color.cpp  color.h  font.h  key.cpp  key.h  keys.inc.h  local_pty.cpp  local_pty.h  mouse.h  process.h  pty.h  renderer.h  screen_buffer.cpp  screen_buffer.h  terminal.cpp  terminal.h  tpp_sequences.h  virtual_terminal.cpp  virtual_terminal.h  vt100.cpp  vt100.h  vterm.cpp  vterm.h  vterm_connector.h  vterm_renderer.h
vterm/linux/: pty_terminal.cpp  pty_terminal.h
vterm/win32/: conpty_terminal.cpp  conpty_terminal.h
vterm_old/: CMakeLists.txt  README.md  color.cpp  color.h  font.h  key.h  keys.inc.h  local_pty.h  mouse.h  pty.h  terminal.h  vt100.h
(+229 files in other folders)
